tests/rosetta/out/Haskell/bitwise-io-2.error
parse error: error[P040]: /workspace/mochi/tests/rosetta/x/Mochi/bitwise-io-2.mochi:6:26: lexer: invalid input text "; i = i + 1 }\n  ..."
  --> /workspace/mochi/tests/rosetta/x/Mochi/bitwise-io-2.mochi:6:26

  6 |   while i < n { v = v * 2; i = i + 1 }
    |                          ^

help:
  String literals must be properly closed with a `"`.